fix: update pipeline notebook

--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -23,21 +23,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-01T11:12:20.765770Z",
-     "start_time": "2025-04-01T11:12:20.553029Z"
+     "end_time": "2026-02-23T12:47:24.696824023Z",
+     "start_time": "2026-02-23T12:47:24.623974957Z"
     }
    },
    "cell_type": "code",
    "source": "import pandas as pd",
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-01T11:12:45.220785Z",
-     "start_time": "2025-04-01T11:12:45.203433Z"
+     "end_time": "2026-02-23T12:49:14.258823259Z",
+     "start_time": "2026-02-23T12:49:14.053790055Z"
     }
    },
    "cell_type": "code",
@@ -726,7 +726,7 @@
     "2. Verifying and assigning the right data types to our columns\n",
     "2. Renaming columns\n",
     "3. Dropping irrelevant columns\n",
-    "4. Creating new columns based on data from already existing data"
+    "4. Creating new columns based on data from already existing columns"
    ],
    "id": "6abc21df55b3ddf7"
   },
@@ -1195,7 +1195,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Verifying that these columns have been dropped, we now see that the shape of the dataframe has changed. We are now 2 columns less.",
+   "source": "Verifying that these columns have been dropped, we now see that the shape of the dataframe has changed. We are now 4 columns less.",
    "id": "a9241d286908b95e"
   },
   {
@@ -3736,7 +3736,7 @@
    "source": [
     "6. _Data Validation_: Changing Data Types as Data Validation\n",
     "\n",
-    "We would check that our columns are of the right data types and otherwise assign them the right data type if they do not. Verifying as seen below, the data types of the columns aren't very correct. So we're going to have to do some modifications."
+    "We would check that our columns are of the right data types and otherwise assign them the right data type if they do not match. Verifying as seen below, the data types of the columns aren't very correct. So we're going to have to do some modifications."
    ],
    "id": "cf2c3dc4db701233"
   },
